[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-topdownengine"
dynamic = ["version"]
authors = [
    { name = "Shaurya Sharma" }
]
requires-python = ">=3.12.10"
dependencies = [
    "pygame-ce>=2.5.7",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Typing :: Typed"
]

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed", "assets/**/*"]