[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-topdownengine"
version = "0.4.0"
authors = [
    { name = "Shaurya Sharma" }
]
requires-python = ">=3.12.10"
dependencies = [
    "pygame-ce~=2.5",
]
description = "pygame-topdownengine is a 2.5D engine for top-down games."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Typing :: Typed"
]
keywords = [
    "game",
    "gamedev",
    "game-engine",
    "engine",
    "game-development",
    "game-2d",
    "collision-detection",
    "pygame", 
    "pygame-library", 
    "topdown",
    "pygame-2d-engine",
    "game-engine-2d",
    "topdown-engine",
    "pygame-ce",
    "z-axis",
    "subpixel-rendering",
    "topdown-game",
    "pixel-perfect-rendering",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.1",
]

[project.urls]
Source = "https://github.com/shaurya-sharma-dev/pygame-topdownengine/tree/main"
Changelog = "https://github.com/shaurya-sharma-dev/pygame-topdownengine/blob/main/CHANGELOG.md"
Documentation = "https://shaurya-sharma-dev.github.io/pygame-topdownengine/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed", "assets/**/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["topdownengine*"]
exclude = ["tests*", "testing*"]

[tool.setuptools_scm] 